replace server to service
