# kk_etcd_api_hub/server/deregisterServer/service.go
@@ -1,8 +1,0 @@
-package deregisterServer
-
-//func (x *api) service() error {
-//	span := x.stage.StartTrace("service")
-//	defer span.End()
-//
-//	return nil
-//}
