# kk_etcd_api_hub/server/serverList/service.go
@@ -1,8 +1,0 @@
-package serverList
-
-//func (x *api) service() error {
-//	span := x.stage.StartTrace("service")
-//	defer span.End()
-//
-//	return nil
-//}
