# kk_etcd_api_hub/service/deregisterService/api.go
@@ -1,0 +1,45 @@
+// Code generated by kk_api_gen. DO NOT EDIT.
+
+package deregisterService
+
+import (
+	"gitee.com/cruvie/kk_go_kit/kk_http"
+	"gitee.com/cruvie/kk_go_kit/kk_http/kk_global_stage"
+	"gitee.com/cruvie/kk_go_kit/kk_stage"
+	"github.com/cruvie/kk_etcd_go/kk_etcd_api_hub/service/api_def"
+	"github.com/gin-gonic/gin"
+)
+
+type api struct {
+	stage *kk_stage.Stage
+	In    *api_def.DeregisterService_Input
+}
+
+func NewApi(stage *kk_stage.Stage) *api {
+	return &api{
+		stage: stage,
+		In:    new(api_def.DeregisterService_Input),
+	}
+}
+
+//	 Handler
+//		@Tags			service
+//		@ID				DeregisterService
+//		@Description	deregister service
+//		@Accept			json,application/x-protobuf
+//		@Produce		json,application/x-protobuf
+//		@Param			api_def.DeregisterService_Input	body		api_def.DeregisterService_Input	true	"DeregisterService_Input"
+//		@Success		200								{object}	api_def.DeregisterService_Output
+//		@Router			/service/deregisterService [post]
+func Handler(c *gin.Context) {
+	x := NewApi(kk_global_stage.GetRequestStage(c))
+	span := x.stage.StartTrace("deregisterServer")
+	defer span.End()
+
+	if err := x.bindCheck(); err != nil {
+		kk_http.WriteResponse(x.stage, err, nil)
+		return
+	}
+	resp, err := x.Handler()
+	kk_http.WriteResponse(x.stage, err, resp)
+}
