# kk_etcd_models/pb_server_registration.pb.go
@@ -1,346 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.36.6
-// 	protoc        v5.29.3
-// source: kk_etcd_models/pb_server_registration.proto
-
-package kk_etcd_models
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	durationpb "google.golang.org/protobuf/types/known/durationpb"
-	reflect "reflect"
-	sync "sync"
-	unsafe "unsafe"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type PBServerType int32
-
-const (
-	PBServerType_Unknown PBServerType = 0
-	PBServerType_Http    PBServerType = 1
-	PBServerType_Grpc    PBServerType = 2
-)
-
-// Enum value maps for PBServerType.
-var (
-	PBServerType_name = map[int32]string{
-		0: "Unknown",
-		1: "Http",
-		2: "Grpc",
-	}
-	PBServerType_value = map[string]int32{
-		"Unknown": 0,
-		"Http":    1,
-		"Grpc":    2,
-	}
-)
-
-func (x PBServerType) Enum() *PBServerType {
-	p := new(PBServerType)
-	*p = x
-	return p
-}
-
-func (x PBServerType) String() string {
-	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
-}
-
-func (PBServerType) Descriptor() protoreflect.EnumDescriptor {
-	return file_kk_etcd_models_pb_server_registration_proto_enumTypes[0].Descriptor()
-}
-
-func (PBServerType) Type() protoreflect.EnumType {
-	return &file_kk_etcd_models_pb_server_registration_proto_enumTypes[0]
-}
-
-func (x PBServerType) Number() protoreflect.EnumNumber {
-	return protoreflect.EnumNumber(x)
-}
-
-// Deprecated: Use PBServerType.Descriptor instead.
-func (PBServerType) EnumDescriptor() ([]byte, []int) {
-	return file_kk_etcd_models_pb_server_registration_proto_rawDescGZIP(), []int{0}
-}
-
-type PBServerRegistration struct {
-	state         protoimpl.MessageState              `protogen:"open.v1"`
-	ServerType    PBServerType                        `protobuf:"varint,1,opt,name=ServerType,proto3,enum=kk_etcd_models.PBServerType" json:"ServerType,omitempty"`
-	ServerName    string                              `protobuf:"bytes,2,opt,name=ServerName,proto3" json:"ServerName,omitempty"`
-	ServerAddr    string                              `protobuf:"bytes,3,opt,name=ServerAddr,proto3" json:"ServerAddr,omitempty"`
-	CheckConfig   *PBServerRegistration_PBCheckConfig `protobuf:"bytes,4,opt,name=CheckConfig,proto3" json:"CheckConfig,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *PBServerRegistration) Reset() {
-	*x = PBServerRegistration{}
-	mi := &file_kk_etcd_models_pb_server_registration_proto_msgTypes[0]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *PBServerRegistration) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*PBServerRegistration) ProtoMessage() {}
-
-func (x *PBServerRegistration) ProtoReflect() protoreflect.Message {
-	mi := &file_kk_etcd_models_pb_server_registration_proto_msgTypes[0]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use PBServerRegistration.ProtoReflect.Descriptor instead.
-func (*PBServerRegistration) Descriptor() ([]byte, []int) {
-	return file_kk_etcd_models_pb_server_registration_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *PBServerRegistration) GetServerType() PBServerType {
-	if x != nil {
-		return x.ServerType
-	}
-	return PBServerType_Unknown
-}
-
-func (x *PBServerRegistration) GetServerName() string {
-	if x != nil {
-		return x.ServerName
-	}
-	return ""
-}
-
-func (x *PBServerRegistration) GetServerAddr() string {
-	if x != nil {
-		return x.ServerAddr
-	}
-	return ""
-}
-
-func (x *PBServerRegistration) GetCheckConfig() *PBServerRegistration_PBCheckConfig {
-	if x != nil {
-		return x.CheckConfig
-	}
-	return nil
-}
-
-type PBListServerRegistration struct {
-	state         protoimpl.MessageState  `protogen:"open.v1"`
-	List          []*PBServerRegistration `protobuf:"bytes,1,rep,name=List,proto3" json:"List,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *PBListServerRegistration) Reset() {
-	*x = PBListServerRegistration{}
-	mi := &file_kk_etcd_models_pb_server_registration_proto_msgTypes[1]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *PBListServerRegistration) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*PBListServerRegistration) ProtoMessage() {}
-
-func (x *PBListServerRegistration) ProtoReflect() protoreflect.Message {
-	mi := &file_kk_etcd_models_pb_server_registration_proto_msgTypes[1]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use PBListServerRegistration.ProtoReflect.Descriptor instead.
-func (*PBListServerRegistration) Descriptor() ([]byte, []int) {
-	return file_kk_etcd_models_pb_server_registration_proto_rawDescGZIP(), []int{1}
-}
-
-func (x *PBListServerRegistration) GetList() []*PBServerRegistration {
-	if x != nil {
-		return x.List
-	}
-	return nil
-}
-
-type PBServerRegistration_PBCheckConfig struct {
-	state protoimpl.MessageState `protogen:"open.v1"`
-	Type  PBServerType           `protobuf:"varint,1,opt,name=Type,proto3,enum=kk_etcd_models.PBServerType" json:"Type,omitempty"` // Http or Grpc
-	// check timeout
-	// must grater than 1 second
-	Timeout *durationpb.Duration `protobuf:"bytes,2,opt,name=Timeout,proto3" json:"Timeout,omitempty"`
-	// check interval, kk_etcd will per Interval to send check request
-	// must grater than Timeout
-	Interval *durationpb.Duration `protobuf:"bytes,3,opt,name=Interval,proto3" json:"Interval,omitempty"`
-	// Http default http://+Addr+/KKHealthCheck
-	// Grpc Addr in ServerRegistration
-	Addr          string `protobuf:"bytes,4,opt,name=Addr,proto3" json:"Addr,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *PBServerRegistration_PBCheckConfig) Reset() {
-	*x = PBServerRegistration_PBCheckConfig{}
-	mi := &file_kk_etcd_models_pb_server_registration_proto_msgTypes[2]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *PBServerRegistration_PBCheckConfig) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*PBServerRegistration_PBCheckConfig) ProtoMessage() {}
-
-func (x *PBServerRegistration_PBCheckConfig) ProtoReflect() protoreflect.Message {
-	mi := &file_kk_etcd_models_pb_server_registration_proto_msgTypes[2]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use PBServerRegistration_PBCheckConfig.ProtoReflect.Descriptor instead.
-func (*PBServerRegistration_PBCheckConfig) Descriptor() ([]byte, []int) {
-	return file_kk_etcd_models_pb_server_registration_proto_rawDescGZIP(), []int{0, 0}
-}
-
-func (x *PBServerRegistration_PBCheckConfig) GetType() PBServerType {
-	if x != nil {
-		return x.Type
-	}
-	return PBServerType_Unknown
-}
-
-func (x *PBServerRegistration_PBCheckConfig) GetTimeout() *durationpb.Duration {
-	if x != nil {
-		return x.Timeout
-	}
-	return nil
-}
-
-func (x *PBServerRegistration_PBCheckConfig) GetInterval() *durationpb.Duration {
-	if x != nil {
-		return x.Interval
-	}
-	return nil
-}
-
-func (x *PBServerRegistration_PBCheckConfig) GetAddr() string {
-	if x != nil {
-		return x.Addr
-	}
-	return ""
-}
-
-var File_kk_etcd_models_pb_server_registration_proto protoreflect.FileDescriptor
-
-const file_kk_etcd_models_pb_server_registration_proto_rawDesc = "" +
-	"\n" +
-	"+kk_etcd_models/pb_server_registration.proto\x12\x0ekk_etcd_models\x1a\x1egoogle/protobuf/duration.proto\"\xae\x03\n" +
-	"\x14PBServerRegistration\x12<\n" +
-	"\n" +
-	"ServerType\x18\x01 \x01(\x0e2\x1c.kk_etcd_models.PBServerTypeR\n" +
-	"ServerType\x12\x1e\n" +
-	"\n" +
-	"ServerName\x18\x02 \x01(\tR\n" +
-	"ServerName\x12\x1e\n" +
-	"\n" +
-	"ServerAddr\x18\x03 \x01(\tR\n" +
-	"ServerAddr\x12T\n" +
-	"\vCheckConfig\x18\x04 \x01(\v22.kk_etcd_models.PBServerRegistration.PBCheckConfigR\vCheckConfig\x1a\xc1\x01\n" +
-	"\rPBCheckConfig\x120\n" +
-	"\x04Type\x18\x01 \x01(\x0e2\x1c.kk_etcd_models.PBServerTypeR\x04Type\x123\n" +
-	"\aTimeout\x18\x02 \x01(\v2\x19.google.protobuf.DurationR\aTimeout\x125\n" +
-	"\bInterval\x18\x03 \x01(\v2\x19.google.protobuf.DurationR\bInterval\x12\x12\n" +
-	"\x04Addr\x18\x04 \x01(\tR\x04Addr\"T\n" +
-	"\x18PBListServerRegistration\x128\n" +
-	"\x04List\x18\x01 \x03(\v2$.kk_etcd_models.PBServerRegistrationR\x04List*/\n" +
-	"\fPBServerType\x12\v\n" +
-	"\aUnknown\x10\x00\x12\b\n" +
-	"\x04Http\x10\x01\x12\b\n" +
-	"\x04Grpc\x10\x02B-Z+github.com/cruvie/kk_etcd_go/kk_etcd_modelsb\x06proto3"
-
-var (
-	file_kk_etcd_models_pb_server_registration_proto_rawDescOnce sync.Once
-	file_kk_etcd_models_pb_server_registration_proto_rawDescData []byte
-)
-
-func file_kk_etcd_models_pb_server_registration_proto_rawDescGZIP() []byte {
-	file_kk_etcd_models_pb_server_registration_proto_rawDescOnce.Do(func() {
-		file_kk_etcd_models_pb_server_registration_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_kk_etcd_models_pb_server_registration_proto_rawDesc), len(file_kk_etcd_models_pb_server_registration_proto_rawDesc)))
-	})
-	return file_kk_etcd_models_pb_server_registration_proto_rawDescData
-}
-
-var file_kk_etcd_models_pb_server_registration_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
-var file_kk_etcd_models_pb_server_registration_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
-var file_kk_etcd_models_pb_server_registration_proto_goTypes = []any{
-	(PBServerType)(0),                          // 0: kk_etcd_models.PBServerType
-	(*PBServerRegistration)(nil),               // 1: kk_etcd_models.PBServerRegistration
-	(*PBListServerRegistration)(nil),           // 2: kk_etcd_models.PBListServerRegistration
-	(*PBServerRegistration_PBCheckConfig)(nil), // 3: kk_etcd_models.PBServerRegistration.PBCheckConfig
-	(*durationpb.Duration)(nil),                // 4: google.protobuf.Duration
-}
-var file_kk_etcd_models_pb_server_registration_proto_depIdxs = []int32{
-	0, // 0: kk_etcd_models.PBServerRegistration.ServerType:type_name -> kk_etcd_models.PBServerType
-	3, // 1: kk_etcd_models.PBServerRegistration.CheckConfig:type_name -> kk_etcd_models.PBServerRegistration.PBCheckConfig
-	1, // 2: kk_etcd_models.PBListServerRegistration.List:type_name -> kk_etcd_models.PBServerRegistration
-	0, // 3: kk_etcd_models.PBServerRegistration.PBCheckConfig.Type:type_name -> kk_etcd_models.PBServerType
-	4, // 4: kk_etcd_models.PBServerRegistration.PBCheckConfig.Timeout:type_name -> google.protobuf.Duration
-	4, // 5: kk_etcd_models.PBServerRegistration.PBCheckConfig.Interval:type_name -> google.protobuf.Duration
-	6, // [6:6] is the sub-list for method output_type
-	6, // [6:6] is the sub-list for method input_type
-	6, // [6:6] is the sub-list for extension type_name
-	6, // [6:6] is the sub-list for extension extendee
-	0, // [0:6] is the sub-list for field type_name
-}
-
-func init() { file_kk_etcd_models_pb_server_registration_proto_init() }
-func file_kk_etcd_models_pb_server_registration_proto_init() {
-	if File_kk_etcd_models_pb_server_registration_proto != nil {
-		return
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: unsafe.Slice(unsafe.StringData(file_kk_etcd_models_pb_server_registration_proto_rawDesc), len(file_kk_etcd_models_pb_server_registration_proto_rawDesc)),
-			NumEnums:      1,
-			NumMessages:   3,
-			NumExtensions: 0,
-			NumServices:   0,
-		},
-		GoTypes:           file_kk_etcd_models_pb_server_registration_proto_goTypes,
-		DependencyIndexes: file_kk_etcd_models_pb_server_registration_proto_depIdxs,
-		EnumInfos:         file_kk_etcd_models_pb_server_registration_proto_enumTypes,
-		MessageInfos:      file_kk_etcd_models_pb_server_registration_proto_msgTypes,
-	}.Build()
-	File_kk_etcd_models_pb_server_registration_proto = out.File
-	file_kk_etcd_models_pb_server_registration_proto_goTypes = nil
-	file_kk_etcd_models_pb_server_registration_proto_depIdxs = nil
-}
